[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/resources/CanvasLayerColorBack.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/OnlineIntermiediary.gd" type="Script" id=2]
[ext_resource path="res://src/Resources/Header 1.tres" type="Theme" id=3]
[ext_resource path="res://src/Resources/Normal Font.tres" type="Theme" id=4]
[ext_resource path="res://src/UI/ConnectionContainer.tscn" type="PackedScene" id=5]

[node name="OnlineIntermiediary" type="Node"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -94.0
margin_right = 52.5
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 98.0
margin_bottom = 212.0

[node name="ReturnButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 27.0
theme = ExtResource( 4 )
text = "Return"

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 91.0
margin_bottom = 62.0
theme = ExtResource( 3 )
text = "Options:"

[node name="HostButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 91.0
margin_bottom = 116.0
rect_min_size = Vector2( 60, 50 )
theme = ExtResource( 4 )
disabled = true
text = "Host!"

[node name="JoinButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 91.0
margin_bottom = 170.0
rect_min_size = Vector2( 60, 50 )
theme = ExtResource( 4 )
disabled = true
text = "Join!"

[node name="LineEdit" type="LineEdit" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 91.0
margin_bottom = 205.0
theme = ExtResource( 4 )
placeholder_text = "AAAA"

[node name="ConnectionContainer" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
